--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: PKUAutoSubmit
 
 on:
   schedule:
-    - cron: '11 1,6,11,16,21 * * 5'
+    - cron: '1 0,21 * * *'
     
   workflow_dispatch:
 
